# jkw_obs-mcp

./: .env.example  .gitignore  README.md  install.sh  machines.toml  pyproject.toml
docs/superpowers/designs/: 2026-04-26-plan-5-gmail-design.md  2026-04-27-plan-6-installer-design.md  2026-04-28-plan-7-learnings-infra-design.md  2026-04-29-plan-8-cluster-rollout-design.md  2026-04-30-plan-8-5-reindex-after-pull-design.md
docs/superpowers/plans/: 2026-04-25-plan-1-bootstrap-vault-adapter-mcp.md  2026-04-25-plan-2-embeddings-indexer-semantic-search.md  (+7 more)
scripts/: bootstrap.sh
services/launchd/: com.jinchiwei.jkw-obs-mcp.daily-review.plist
src/jkw_obs_mcp/: __init__.py  config.py  errors.py
tests/: conftest.py  test_anthropic_client.py  test_brain_sync.py  test_calendar.py  test_compile_state.py  test_compiler_clips.py  test_compiler_papers.py  test_config.py  test_context_autofeeder.py  test_context_email_summary.py  test_context_mission_log.py  test_context_open_tasks.py  test_context_vault_delta.py  test_email_compiler.py  test_email_thread_state.py  test_errors.py  test_generator_daily_review.py  test_gmail_adapter_fetch.py  test_gmail_adapter_token.py  test_gmail_body_extract.py  test_indexer_embedder.py  test_indexer_reindex.py  test_indexer_store.py  test_indexer_walker.py  test_installer_bootstrap_brain_repo.py  test_installer_cli.py  test_installer_config_dir.py  test_installer_gmail_oauth.py  test_installer_launchd.py  test_installer_machines_check.py  test_installer_mcp_registration.py  test_installer_plist_render.py  test_learnings_frontmatter.py  test_learnings_git.py  test_learnings_path.py  test_learnings_record.py  test_learnings_slug.py  test_mcp_compile_email_tool.py  test_mcp_compile_tool.py  test_mcp_daily_review_tool.py  (+7 more)
tools/: pdf_to_raw.py
(+38 files in other folders)
