[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jkw-obs-mcp"
version = "0.1.0"
description = "Personal second-brain MCP server over an Obsidian vault"
requires-python = ">=3.11"
authors = [{ name = "Jin Wei", email = "mrjinch@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.6",
    "anthropic[bedrock]>=0.40.0",
    "pymupdf>=1.24.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
mac = [
    "pyobjc-framework-EventKit>=12.0",
]
gmail = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.30",
    "html2text>=2024.2.26",
]

[project.scripts]
jkw-obs-mcp = "jkw_obs_mcp.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jkw_obs_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
